<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/AboutViewBackButton"
        android:layout_width="150pt"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/AboutUsBackButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/AboutUsTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/AboutUsContent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="6pt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/AboutUsDeveloperTeamCode"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/AboutUsMembers"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="6pt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AboutViewBackButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/AboutUsAppDescription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="5pt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/AboutUsDescriptionTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10pt" />

</RelativeLayout>